Attempt to fix text overflow

--- a/static/css/olive.css
+++ b/static/css/olive.css
@@ -121,9 +121,11 @@ pre
 
 #content pre
 {
-/*    border-left: 5px solid #838F67;*/
     border-left: none;
     padding: 0;
+    overflow: auto;
+    white-space: nowrap;
+    white-space: pre-wrap; /* Chrome */
 }
 
 #content .label
